- use stack to implement base division algorithm

--- a/Stacks data structure.ipynb
+++ b/Stacks data structure.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "False"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,6 +298,83 @@
     "print(parChecker('[{()]'))\n",
     "\n",
     "matches('(', '(')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using a stack to implement the Divide by 2 algorithm.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101010\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pythonds.basic import Stack\n",
+    "\n",
+    "def divideBy2(decNumber):\n",
+    "    remstack = Stack()\n",
+    "\n",
+    "    while decNumber > 0:\n",
+    "        rem = decNumber % 2\n",
+    "        remstack.push(rem)\n",
+    "        decNumber = decNumber // 2\n",
+    "\n",
+    "    binString = \"\"\n",
+    "    while not remstack.isEmpty():\n",
+    "        binString = binString + str(remstack.pop())\n",
+    "\n",
+    "    return binString\n",
+    "\n",
+    "print(divideBy2(42))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11001\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pythonds.basic import Stack\n",
+    "\n",
+    "def baseConverter(decNumber,base):\n",
+    "    digits = \"0123456789ABCDEF\"\n",
+    "\n",
+    "    remstack = Stack()\n",
+    "\n",
+    "    while decNumber > 0:\n",
+    "        rem = decNumber % base\n",
+    "        remstack.push(rem)\n",
+    "        decNumber = decNumber // base\n",
+    "\n",
+    "    newString = \"\"\n",
+    "    while not remstack.isEmpty():\n",
+    "        newString = newString + digits[remstack.pop()]\n",
+    "\n",
+    "    return newString\n",
+    "\n",
+    "print(baseConverter(25,2))\n",
+    "print(baseConverter(25,16))\n"
    ]
   }
  ],
