- implement an unordered link (linked list)

--- a/Deque Abstract Data Type.ipynb
+++ b/Deque Abstract Data Type.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +69,55 @@
     "print('d.removeRear() = ', d.removeRear())\n",
     "print('d = ', d)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Palindrome-Checker\n",
+    "The deque data structure can be used to solve the classic palindrome problem. A palindrome is a string that reads the same forward and backward, for example, **radar**, **toot**, and **madam**. Let's implement an algorithm to input a string of characters and check whether it is a palindrome. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pythonds.basic import Deque\n",
+    "\n",
+    "\n",
+    "def check_palindrome(inputStr):\n",
+    "    pdeque = Deque()\n",
+    "    for ch in inputStr:\n",
+    "        pdeque.addRear(ch)\n",
+    "        \n",
+    "    while pdeque.size() >= 2:\n",
+    "        if (pdeque.removeFront() != pdeque.removeRear()):\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "check_palindrome('madam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
