implement an Ordered List

--- a/ Implementing an Ordered List.ipynb
+++ b/ Implementing an Ordered List.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,97 +26,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "93"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp = Node(93)\n",
-    "temp.getData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UnorderedList:\n",
+    "class OrderedList:\n",
     "    def __init__(self):\n",
     "        self.head = None\n",
-    "        \n",
-    "    def isEmpty(self):\n",
-    "        return self.head == Noned\n",
     "    \n",
-    "    def add(self, item):\n",
-    "        temp = Node(item)\n",
-    "        temp.setNext(self.head)\n",
-    "        self.head = temp\n",
-    "        \n",
+    "    def isEmpty(self):\n",
+    "        return self.head == None\n",
+    "    \n",
     "    def size(self):\n",
     "        current = self.head\n",
     "        count = 0\n",
-    "        while current is not None:\n",
+    "        while current != None:\n",
     "            count = count + 1\n",
     "            current = current.getNext()\n",
-    "        \n",
+    "            \n",
     "        return count\n",
-    "      \n",
-    "    def search(self, item):\n",
-    "        current = self.head\n",
-    "        found = False\n",
-    "        while not found and current is not None:\n",
-    "            if current.getData() == item:\n",
-    "                found = True\n",
-    "            else:\n",
-    "                current = current.getNext()\n",
-    "                \n",
-    "        return found\n",
     "    \n",
-    "    def remove(self, item):\n",
+    "    def add(self, item):\n",
+    "        temp = Node(item)\n",
     "        current = self.head\n",
     "        previous = None\n",
+    "        foundGreater = False\n",
+    "        \n",
+    "        while not foundGreater and current != None:\n",
+    "            if current.getData() > item:\n",
+    "                foundGreater = True\n",
+    "            else:\n",
+    "                previous = current\n",
+    "                current = current.getNext()\n",
+    "       \n",
+    "        if previous == None:\n",
+    "            temp.setNext(self.head)\n",
+    "            self.head = temp\n",
+    "        else:\n",
+    "            previous.setNext(temp)\n",
+    "            temp.setNext(current)\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    def remove(self, item):\n",
+    "        previous = None\n",
+    "        current = self.head\n",
     "        found = False\n",
-    "        while not found and current is not None:\n",
+    "        while current != None and not Found:\n",
     "            if current.getData() == item:\n",
     "                found = True\n",
     "            else:\n",
     "                previous = current\n",
     "                current = current.getNext()\n",
-    "      \n",
-    "        if previous is None:\n",
+    "        \n",
+    "        if previous == None:\n",
     "            self.head = current.getNext()\n",
     "        else:\n",
     "            previous.setNext(current.getNext())\n",
-    "    \n",
-    "    def append(self, item):\n",
-    "        temp = Node(item)\n",
+    "        \n",
+    "    def search(self, item):\n",
     "        current = self.head\n",
-    "        lastItem = None\n",
-    "        while not lastItem:\n",
-    "            if current.getNext() == None:\n",
-    "                lastItem = current\n",
-    "                lastItem.setNext(temp)\n",
+    "        found = False\n",
+    "        stop = False\n",
+    "        while current != None and not found and not stop:\n",
+    "            if current.getData() == item:\n",
+    "                found = True\n",
     "            else:\n",
-    "                current = current.getNext()\n",
+    "                if current.getData() > item:\n",
+    "                    stop = True\n",
+    "                else:\n",
+    "                    current = current.getNext()\n",
     "        \n",
+    "        return found\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        res = []\n",
+    "        current = self.head\n",
+    "        while current != None:\n",
+    "            res.append(current.getData())\n",
+    "            current = current.getNext()\n",
     "        \n",
-    "        "
+    "        return f\"[{', '.join([str(i) for i in res])}]\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -125,54 +120,44 @@
      "text": [
       "None\n",
       "True\n",
-      "size =  6\n",
-      "mylist.search(93) =  True\n",
-      "mylist.head.getData() =  54\n",
-      "mylist.search(77) =  True\n",
-      "size =  7\n",
-      "size =  6\n",
-      "mylist.search(77) =  True\n"
+      "1.  [31]\n",
+      "2.  [31, 77]\n",
+      "3.  [17, 31, 77]\n",
+      "4.  [17, 31, 77, 93]\n",
+      "5.  [17, 26, 31, 77, 93]\n",
+      "6.  [17, 26, 31, 54, 77, 93]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mylist = UnorderedList()\n",
+    "mylist = OrderedList()\n",
     "print(mylist.head)\n",
     "print(mylist.isEmpty())\n",
+    "\n",
+    "#1. \n",
     "mylist.add(31) # [31]\n",
+    "print('1. ', mylist)\n",
+    "\n",
+    "#2. \n",
     "mylist.add(77) # [77, 31]\n",
+    "print('2. ', mylist)\n",
+    "\n",
+    "#3.\n",
     "mylist.add(17) # [17, 77, 31]\n",
+    "print('3. ', mylist)\n",
+    "\n",
+    "#4.\n",
     "mylist.add(93) # [93, 17, 77, 31]\n",
+    "print('4. ', mylist)\n",
+    "\n",
+    "#5.\n",
     "mylist.add(26) # [26, 93, 17, 77, 31]\n",
+    "print('5. ', mylist)\n",
+    "\n",
+    "#6.\n",
     "mylist.add(54) # [54, 26, 93, 17, 77, 31]\n",
-    "print('size = ', mylist.size())\n",
-    "print('mylist.search(93) = ', mylist.search(93))\n",
-    "print('mylist.head.getData() = ', mylist.head.getData())\n",
-    "print('mylist.search(77) = ', mylist.search(77))\n",
-    "mylist.append(10000)\n",
-    "print('size = ', mylist.size())\n",
-    "mylist.remove(31)\n",
-    "print('size = ', mylist.size())\n",
-    "print('mylist.search(77) = ', mylist.search(77))\n",
-    "mylist.search(10000)"
+    "print('6. ', mylist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
