- hashing - recursion - bubble sort and short bubble

--- a/Recursion examples.ipynb
+++ b/Recursion examples.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "25"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "'01234567'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "'789676878778'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "'olleh'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,97 @@
     "\n",
     "* Kanakanak – a town in Alaska\n",
     "\n",
-    "* Wassamassaw – a town in South Dakota"
+    "* Wassamassaw – a town in South Dakota\n",
+    "\n",
+    "\n",
+    "Note:\n",
+    " in line 2, we will remove all special characters from the string and convert each character to a lower case.\n",
+    " For e.g 'madam I'm Adam' becomes 'madamimadam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPalindrome(str_):\n",
+    "    str_ = ''.join([ch.lower() for ch in str_ if ch.isalnum()])\n",
+    "    if str_ == reverse(str_):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'isPalindrome' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-dbe95f9d4607>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misPalindrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"madam i’m adam\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misPalindrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'kayak'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misPalindrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'aibohphobia'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misPalindrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Live not on evil'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0misPalindrome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Reviled did I live, said I, as evil I did deliver'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'isPalindrome' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(isPalindrome(\"madam i’m adam\"))\n",
+    "print(isPalindrome('kayak'))\n",
+    "print(isPalindrome('aibohphobia'))\n",
+    "print(isPalindrome('Live not on evil'))\n",
+    "print(isPalindrome('Reviled did I live, said I, as evil I did deliver'))\n",
+    "print(isPalindrome(\"Go hang a salami; I’m a lasagna hog\"))\n",
+    "print(isPalindrome('Able was I ere I saw Elba'))\n",
+    "print(isPalindrome('Kanakanak'))\n",
+    "print(isPalindrome('Wassamassaw'))\n",
+    "\n",
+    "print(isPalindrome(\"298agh9uah9gh98at\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tower of Hanoi\n",
+    "The Tower of Hanoi puzzle was invented by the French mathematician Edouard Lucas in 1883. He was inspired by a legend that tells of a Hindu temple where the puzzle was presented to young priests. At the beginning of time, the priests were given three poles and a stack of 64 gold disks, each disk a little smaller than the one beneath it. Their assignment was to transfer all 64 disks from one of the three poles to another, with two important constraints. They could only move one disk at a time, and they could never place a larger disk on top of a smaller one. The priests worked very efficiently, day and night, moving one disk every second. When they finished their work, the legend said, the temple would crumble into dust and the world would vanish."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moving disk from A to B\n",
+      "moving disk from A to C\n",
+      "moving disk from B to C\n",
+      "moving disk from A to B\n",
+      "moving disk from C to A\n",
+      "moving disk from C to B\n",
+      "moving disk from A to B\n"
+     ]
+    }
+   ],
+   "source": [
+    "def moveTower(height,fromPole, toPole, withPole):\n",
+    "    if height >= 1:\n",
+    "        moveTower(height-1,fromPole,withPole,toPole)\n",
+    "        moveDisk(fromPole,toPole)\n",
+    "        moveTower(height-1,withPole,toPole,fromPole)\n",
+    "\n",
+    "def moveDisk(fp,tp):\n",
+    "    print(\"moving disk from\",fp,\"to\",tp)\n",
+    "\n",
+    "moveTower(3,\"A\",\"B\",\"C\")\n"
    ]
   }
  ],
