--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,72 @@
     "\n",
     "print(test_arr)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selection_sort_2(alist):\n",
+    "    noOfPasses = len(alist) - 1\n",
+    "    for passNo in range(noOfPasses, 0, -1):\n",
+    "        posOfMax = 0\n",
+    "        for pos in range(1, passNo+1):\n",
+    "            if(alist[pos] > alist[posOfMax]):\n",
+    "                posOfMax = pos\n",
+    "\n",
+    "        temp = alist[posOfMax]\n",
+    "        alist[posOfMax] = alist[passNo]\n",
+    "        alist[passNo] = temp\n",
+    "    return alist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def selection_sort(alist):\n",
+    "    noOfPasses = len(alist) - 1\n",
+    "    for passNo in range(noOfPasses, 0, -1):\n",
+    "        posOfMax = 0\n",
+    "        for pos in range(1, passNo+1):\n",
+    "            if(alist[pos] > alist[posOfMax]):\n",
+    "                posOfMax = pos\n",
+    "\n",
+    "        alist[posOfMax], alist[passNo] = alist[passNo], alist[posOfMax]\n",
+    "    return alist\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selection_sort([54,26,93,17,77,31,44,55,20])"
    ]
   }
  ],
