- implement insertion sort

--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +138,91 @@
        "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "selection_sort([54,26,93,17,77,31,44,55,20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insertion Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 20, 26, 31, 44, 54, 55, 77, 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertionSort(alist):\n",
+    "   for index in range(1,len(alist)):\n",
+    "\n",
+    "     currentvalue = alist[index]\n",
+    "     position = index\n",
+    "\n",
+    "     while position>0 and alist[position-1]>currentvalue:\n",
+    "         alist[position]=alist[position-1]\n",
+    "         position = position-1\n",
+    "\n",
+    "     alist[position]=currentvalue\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "insertionSort(alist)\n",
+    "print(alist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertion_sort(alist):\n",
+    "    for index in range(1, len(alist)):\n",
+    "        current_value = alist[index]\n",
+    "        pos = index\n",
+    "        \n",
+    "        while pos > 0 and alist[pos-1] > current_value:\n",
+    "            alist[pos] = alist[pos-1]\n",
+    "            pos = pos - 1\n",
+    "            \n",
+    "        alist[pos] = current_value\n",
+    "            \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 20, 26, 31, 44, 54, 55, 77, 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "insertion_sort(alist)\n",
+    "print(alist)"
    ]
   }
  ],
