--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +222,228 @@
    "source": [
     "alist = [54,26,93,17,77,31,44,55,20]\n",
     "insertion_sort(alist)\n",
+    "print(alist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shell Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After increments of size 4 The list is [20, 26, 44, 17, 54, 31, 93, 55, 77]\n",
+      "After increments of size 2 The list is [20, 17, 44, 26, 54, 31, 77, 55, 93]\n",
+      "After increments of size 1 The list is [17, 20, 26, 31, 44, 54, 55, 77, 93]\n",
+      "[17, 20, 26, 31, 44, 54, 55, 77, 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shellSort(alist):\n",
+    "    sublistcount = len(alist)//2\n",
+    "    while sublistcount > 0:\n",
+    "\n",
+    "      for startposition in range(sublistcount):\n",
+    "        gapInsertionSort(alist,startposition,sublistcount)\n",
+    "\n",
+    "      print(\"After increments of size\",sublistcount,\n",
+    "                                   \"The list is\",alist)\n",
+    "\n",
+    "      sublistcount = sublistcount // 2\n",
+    "\n",
+    "def gapInsertionSort(alist,start,gap):\n",
+    "    for i in range(start+gap,len(alist),gap):\n",
+    "\n",
+    "        currentvalue = alist[i]\n",
+    "        position = i\n",
+    "\n",
+    "        while position>=gap and alist[position-gap]>currentvalue:\n",
+    "            alist[position]=alist[position-gap]\n",
+    "            position = position-gap\n",
+    "\n",
+    "        alist[position]=currentvalue\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "shellSort(alist)\n",
+    "print(alist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "\t [54, 26, 93, 17, 77, 31, 44, 55, 20] 0 4\n",
+      "\t alist[4] 77\n",
+      "\t alist[8] 20\n",
+      "\t [20, 26, 93, 17, 54, 31, 44, 55, 77] 1 4\n",
+      "\t alist[5] 31\n",
+      "\t [20, 26, 93, 17, 54, 31, 44, 55, 77] 2 4\n",
+      "\t alist[6] 44\n",
+      "\t [20, 26, 44, 17, 54, 31, 93, 55, 77] 3 4\n",
+      "\t alist[7] 55\n",
+      "2\n",
+      "\t [20, 26, 44, 17, 54, 31, 93, 55, 77] 0 2\n",
+      "\t alist[2] 44\n",
+      "\t alist[4] 54\n",
+      "\t alist[6] 93\n",
+      "\t alist[8] 77\n",
+      "\t [20, 26, 44, 17, 54, 31, 77, 55, 93] 1 2\n",
+      "\t alist[3] 17\n",
+      "\t alist[5] 31\n",
+      "\t alist[7] 55\n",
+      "1\n",
+      "\t [20, 17, 44, 26, 54, 31, 77, 55, 93] 0 1\n",
+      "\t alist[1] 17\n",
+      "\t alist[2] 44\n",
+      "\t alist[3] 26\n",
+      "\t alist[4] 54\n",
+      "\t alist[5] 31\n",
+      "\t alist[6] 77\n",
+      "\t alist[7] 55\n",
+      "\t alist[8] 93\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shellSort(alist):\n",
+    "    sublistcount = len(alist)//2\n",
+    "    while sublistcount > 0:\n",
+    "      print(sublistcount)\n",
+    "#         sublistcount = sublistcount // 2\n",
+    "      for startposition in range(sublistcount):\n",
+    "        print('\\t', alist, startposition, sublistcount)\n",
+    "        gapInsertionSort(alist,startposition,sublistcount)\n",
+    "\n",
+    "#       print(\"After increments of size\",sublistcount,\n",
+    "#                                    \"The list is\",alist)\n",
+    "\n",
+    "      sublistcount = sublistcount // 2\n",
+    "\n",
+    "def gapInsertionSort(alist,start,gap):\n",
+    "#     print('\\t', alist, start, gap)\n",
+    "    for i in range(start+gap,len(alist),gap):\n",
+    "\n",
+    "        currentvalue = alist[i]\n",
+    "        print('\\t', f'alist[{i}]', currentvalue)\n",
+    "        position = i\n",
+    "\n",
+    "        while position>=gap and alist[position-gap]>currentvalue:\n",
+    "            alist[position]=alist[position-gap]\n",
+    "            position = position-gap\n",
+    "\n",
+    "        alist[position]=currentvalue\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "shellSort(alist)\n",
+    "# print(alist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Splitting  [54, 26, 93, 17, 77, 31, 44, 55, 20]\n",
+      "Splitting  [54, 26, 93, 17]\n",
+      "Splitting  [54, 26]\n",
+      "Splitting  [54]\n",
+      "Merging  [54]\n",
+      "Splitting  [26]\n",
+      "Merging  [26]\n",
+      "Merging  [26, 54]\n",
+      "Splitting  [93, 17]\n",
+      "Splitting  [93]\n",
+      "Merging  [93]\n",
+      "Splitting  [17]\n",
+      "Merging  [17]\n",
+      "Merging  [17, 93]\n",
+      "Merging  [17, 26, 54, 93]\n",
+      "Splitting  [77, 31, 44, 55, 20]\n",
+      "Splitting  [77, 31]\n",
+      "Splitting  [77]\n",
+      "Merging  [77]\n",
+      "Splitting  [31]\n",
+      "Merging  [31]\n",
+      "Merging  [31, 77]\n",
+      "Splitting  [44, 55, 20]\n",
+      "Splitting  [44]\n",
+      "Merging  [44]\n",
+      "Splitting  [55, 20]\n",
+      "Splitting  [55]\n",
+      "Merging  [55]\n",
+      "Splitting  [20]\n",
+      "Merging  [20]\n",
+      "Merging  [20, 55]\n",
+      "Merging  [20, 44, 55]\n",
+      "Merging  [20, 31, 44, 55, 77]\n",
+      "Merging  [17, 20, 26, 31, 44, 54, 55, 77, 93]\n",
+      "[17, 20, 26, 31, 44, 54, 55, 77, 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mergeSort(alist):\n",
+    "    print(\"Splitting \",alist)\n",
+    "    if len(alist)>1:\n",
+    "        mid = len(alist)//2\n",
+    "        lefthalf = alist[:mid]\n",
+    "        righthalf = alist[mid:]\n",
+    "\n",
+    "        mergeSort(lefthalf)\n",
+    "        mergeSort(righthalf)\n",
+    "\n",
+    "        i=0\n",
+    "        j=0\n",
+    "        k=0\n",
+    "        while i < len(lefthalf) and j < len(righthalf):\n",
+    "            if lefthalf[i] <= righthalf[j]:\n",
+    "                alist[k]=lefthalf[i]\n",
+    "                i=i+1\n",
+    "            else:\n",
+    "                alist[k]=righthalf[j]\n",
+    "                j=j+1\n",
+    "            k=k+1\n",
+    "\n",
+    "        while i < len(lefthalf):\n",
+    "            alist[k]=lefthalf[i]\n",
+    "            i=i+1\n",
+    "            k=k+1\n",
+    "\n",
+    "        while j < len(righthalf):\n",
+    "            alist[k]=righthalf[j]\n",
+    "            j=j+1\n",
+    "            k=k+1\n",
+    "    print(\"Merging \",alist)\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "mergeSort(alist)\n",
     "print(alist)"
    ]
   }
