--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -445,6 +445,73 @@
     "alist = [54,26,93,17,77,31,44,55,20]\n",
     "mergeSort(alist)\n",
     "print(alist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quick Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 20, 26, 31, 44, 54, 55, 77, 93]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quickSort(alist):\n",
+    "   quickSortHelper(alist,0,len(alist)-1)\n",
+    "\n",
+    "def quickSortHelper(alist,first,last):\n",
+    "   if first<last:\n",
+    "\n",
+    "       splitpoint = partition(alist,first,last)\n",
+    "\n",
+    "       quickSortHelper(alist,first,splitpoint-1)\n",
+    "       quickSortHelper(alist,splitpoint+1,last)\n",
+    "\n",
+    "\n",
+    "def partition(alist,first,last):\n",
+    "   pivotvalue = alist[first]\n",
+    "\n",
+    "   leftmark = first+1\n",
+    "   rightmark = last\n",
+    "\n",
+    "   done = False\n",
+    "   while not done:\n",
+    "\n",
+    "       while leftmark <= rightmark and alist[leftmark] <= pivotvalue:\n",
+    "           leftmark = leftmark + 1\n",
+    "\n",
+    "       while alist[rightmark] >= pivotvalue and rightmark >= leftmark:\n",
+    "           rightmark = rightmark -1\n",
+    "\n",
+    "       if rightmark < leftmark:\n",
+    "           done = True\n",
+    "       else:\n",
+    "           temp = alist[leftmark]\n",
+    "           alist[leftmark] = alist[rightmark]\n",
+    "           alist[rightmark] = temp\n",
+    "\n",
+    "   temp = alist[first]\n",
+    "   alist[first] = alist[rightmark]\n",
+    "   alist[rightmark] = temp\n",
+    "\n",
+    "\n",
+    "   return rightmark\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "quickSort(alist)\n",
+    "print(alist)\n"
    ]
   }
  ],
