--- a/Tree.ipynb
+++ b/Tree.ipynb
@@ -78,11 +78,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The parse tree builder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "5\n",
+      "+\n",
+      "3\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pythonds.basic import Stack\n",
+    "from pythonds.trees import BinaryTree\n",
+    "\n",
+    "def buildParseTree(fpexp):\n",
+    "    fplist = fpexp.split()\n",
+    "    pStack = Stack()\n",
+    "    eTree = BinaryTree('')\n",
+    "    pStack.push(eTree)\n",
+    "    currentTree = eTree\n",
+    "\n",
+    "    for i in fplist:\n",
+    "        if i == '(':\n",
+    "            currentTree.insertLeft('')\n",
+    "            pStack.push(currentTree)\n",
+    "            currentTree = currentTree.getLeftChild()\n",
+    "\n",
+    "        elif i in ['+', '-', '*', '/']:\n",
+    "            currentTree.setRootVal(i)\n",
+    "            currentTree.insertRight('')\n",
+    "            pStack.push(currentTree)\n",
+    "            currentTree = currentTree.getRightChild()\n",
+    "\n",
+    "        elif i == ')':\n",
+    "            currentTree = pStack.pop()\n",
+    "\n",
+    "        elif i not in ['+', '-', '*', '/', ')']:\n",
+    "            try:\n",
+    "                currentTree.setRootVal(int(i))\n",
+    "                parent = pStack.pop()\n",
+    "                currentTree = parent\n",
+    "\n",
+    "            except ValueError:\n",
+    "                raise ValueError(\"token '{}' is not a valid integer\".format(i))\n",
+    "\n",
+    "    return eTree\n",
+    "\n",
+    "pt = buildParseTree(\"( ( 10 + 5 ) * 3 )\")\n",
+    "pt.postorder()  #defined and explained in the next section\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A function to evaluate the parse tree, returning the numerical result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import operator\n",
+    "def evaluate(parseTree):\n",
+    "    opers = {'+':operator.add, '-':operator.sub, '*':operator.mul, '/':operator.truediv}\n",
+    "\n",
+    "    leftC = parseTree.getLeftChild()\n",
+    "    rightC = parseTree.getRightChild()\n",
+    "\n",
+    "    if leftC and rightC:\n",
+    "        fn = opers[parseTree.getRootVal()]\n",
+    "        return fn(evaluate(leftC),evaluate(rightC))\n",
+    "    else:\n",
+    "        return parseTree.getRootVal()"
+   ]
   }
  ],
  "metadata": {
