implement the MSDie class

--- a/1.13. Object-Oriented Programming in Python - Defining Classes.ipynb
+++ b/1.13. Object-Oriented Programming in Python - Defining Classes.ipynb
@@ -432,11 +432,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### the MSDie class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "2 2\n",
+      "6 6\n",
+      "4 4\n",
+      "4 4\n",
+      "1\n",
+      "[MSDie(6) : 1, MSDie(20) : 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "class MSDie:\n",
+    "    \"\"\"\n",
+    "    Mulit-sided die\n",
+    "    \n",
+    "    Instance Variables:\n",
+    "        current_value\n",
+    "        num_sides\n",
+    "    \"\"\"\n",
+    "    def __init__(self, num_sides):\n",
+    "        self.num_sides = num_sides\n",
+    "        self.current_value = self.roll()\n",
+    "    \n",
+    "    def roll(self):\n",
+    "        self.current_value = random.randrange(1, self.num_sides+1)\n",
+    "        return self.current_value\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return str(self.current_value)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return \"MSDie({}) : {}\".format(self.num_sides, self.current_value)\n",
+    "\n",
+    "    \n",
+    "die = MSDie(6)\n",
+    "for i in range(5):\n",
+    "    print(die, die.current_value)\n",
+    "    die.roll()\n",
+    "\n",
+    "print(MSDie(6))\n",
+    "die_list = [MSDie(6), MSDie(20)]\n",
+    "print(die_list)\n"
+   ]
   }
  ],
  "metadata": {
