repeat 2 ananagram detection

--- a/anagram_detection.ipynb
+++ b/anagram_detection.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +58,34 @@
    ],
    "source": [
     "def anagramSolution2(str1, str2):\n",
+    "    arr1 = list(str1)\n",
+    "    arr1.sort()\n",
+    "    sorted_str1 = ''.join(arr1) # note 'join' uses loop under the hood, and will loop through each element of arr1 giving a cost of n even if there is no match in arr2\n",
+    "    arr2 = list(str2)\n",
+    "    arr2.sort()\n",
+    "    sorted_str2 = ''.join(arr2) \n",
+    "    \n",
+    "    return sorted_str1 == sorted_str2\n",
+    "    \n",
+    " \n",
+    "print(anagramSolution3('dabcdz','dcdzba'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def anagramSolution3(str1, str2):\n",
     "    alist1 = list(str1)\n",
     "    alist2 = list(str2)\n",
     "    \n",
@@ -70,12 +98,12 @@
     "        return True\n",
     "    \n",
     " \n",
-    "print(anagramSolution2('abcd','dcba'))"
+    "print(anagramSolution3('abcd','dcba'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -110,6 +138,53 @@
     "    return stillOK\n",
     "\n",
     "print(anagramSolution4('apple','pleap'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alphabets = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "[ord(i) for i in alphabets]\n",
+    "[ord(i)-ord('a') for i in alphabets]"
    ]
   }
  ],
