update the anagram detection algorithm

--- a/anagram_detection.ipynb
+++ b/anagram_detection.ipynb
@@ -103,13 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
       "True\n"
      ]
     }
@@ -127,6 +129,8 @@
     "        pos = ord(s2[i])-ord('a')\n",
     "        c2[pos] = c2[pos] + 1\n",
     "\n",
+    "    print(c1)\n",
+    "    print(c2)\n",
     "    j = 0\n",
     "    stillOK = True\n",
     "    while j<26 and stillOK:\n",
